--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Index.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Index.cshtml
@@ -2,3 +2,14 @@
     ViewBag.Title = "Home Page";
 }
 
+    <div id="titleContainer">
+        <h1 id="welcomeTitle">Welcome!</h1>
+        <div class="row">
+            <div class="col-md-3" id="mainPage">
+                <div id="myImage"><img src="~/Images/me.jpg" /></div>
+            </div>
+            <div class="col-md-9" id="mainPage">
+                <p> Welcome to my website! I'm Madison, but I typically go by Maddy. I am a Computer Science major and Communications minor, graduating by June 13th, 2020. Please use the navigation bar above to view the contents of my website. </p>
+            </div>
+        </div>
+    </div>
