--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Index.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
     ViewBag.Title = "Home Page";
 }
 
+<h1 id="welcome">Welcome, glad you're here!</h1>
     <div id="titleContainer">
-        <h1 id="welcomeTitle">Welcome!</h1>
+        <h1 id="welcomeTitle">Hi, my name is Madison. </h1>
         <div class="row">
             <div class="col-md-3" id="mainPage">
                 <div id="myImage"><img src="~/Images/me.jpg" /></div>
