--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Index.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                 <div id="myImage"><img src="~/Images/me.jpg" /></div>
             </div>
             <div class="col-md-9" id="mainPage">
-                <p> Welcome to my website! I'm Madison, but I typically go by Maddy. I am a Computer Science major and Communications minor, graduating by June 13th, 2020. Please use the navigation bar above to view the contents of my website. </p>
+                <p> Welcome to my website! I'm Madison, but I typically go by Maddy. Currently, I am attending Western Oregon University as a senior, obtaining a degree in <b>Computer Science</b> and a minor in <b>Communications</b> by this summer, as I'm graduating on June 13th, 2020. Please use the navigation bar above to view the contents of my website. </p>
             </div>
         </div>
     </div>
