--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/About.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/About.cshtml
@@ -1,7 +1,58 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h1 id="welcome">About Me</h1>
+<div id="titleContainer">
+    <h1>Hi, nice to meet you. </h1>
+    <p> As stated on my Home page, my name is Madison, but you can call me Maddy if you'd like. </p>
+</div>
+<br />
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="~/Images/me.jpg" id="carouselPics"/>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/sunrise4.png" id="carouselPics" />
+        </div>
+
+        <div class="item">
+            <img src="~/Images/sunrise3.png" id="carouselPics" />
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<div id="titleContainer">
+    <h1>Fun Facts About Myself</h1>
+    <ol> 
+       <li>I love musicals of all types (Hamilton, Dear Evan Hansen, Rent, Book of Mormon, etc).</li>
+       <li>I love shows like How I Met Your Mother, The Office, Breaking Bad, BoJack Horseman, and many others.</li>
+       <li>I try to run daily with my boyfriend to stay in shape, especially during quarantine where we're all stuck inside for quite some time.</li>
+       <li> I am obsessed with coffee and inspirational/happy quotes, and often, these two things collide for me. For example, I have a ton of pictures of coffee in my room, as well as pictures of inspirational quotes with pretty background images.</li>
+       <li>I love the rain, and way prefer the rain compared to super hot (80+ degree) weather; however I am a bonafide optimist, and I love all things "Happy", like the sun, the color orange, and positive vibes.</li>
+       <li>I like to read when I can (Jack Kerouac or poetry books).</li>
+       <li>I love playing Jackbox with my friends and family, as well as most board games.</li>
+       <li>If I play video games, it would have to be puzzling games like Portal or Town of Salem, or basically any Mario game.</li>
+       <li>My favorite animal would definitely be birds, and I enjoy bird watching when I'm bored and/or have the time.</li>
+    </ol>
+</div>
