--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Shared/_Layout.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Shared/_Layout.cshtml
@@ -26,8 +26,9 @@
                     <li id="myName">Madison Klienstuber</li>
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Portfolio", "Portfolio", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li><div id="sunShine"><img src="~/Images/sunrise.png"/></div></li>
+                    <li><div id="sunShine"><img src="~/Images/sunrise.png" /></div></li>
                 </ul>
             </div>
         </div>
