--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/About.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/About.cshtml
@@ -4,12 +4,14 @@
 
 <h1 id="welcome">About Me</h1>
 <div id="titleContainer2">
-    <h1>Hi, nice to meet you. </h1>
+    <h1>Hello, nice to meet you. </h1>
     <div class="row">
         <div class="col-md-5" id="mainPage">
-            <br /><br /><br /><br /><br />
-            <p style="font-size:25px"> As stated on my Home page, my name is </p>
+            <br /><br /><br />
+            <p id="callMeMaddy1"> As stated on my Home page, my name is </p>
             <p id="myName2"> Madison Klienstuber </p> <p id="callMeMaddy"> but you can call me Maddy if you'd like. </p>
+            <br /><br />
+            <p id="descriptionOfPics">Enjoy some snapshots of my life on the right-hand side, and get a general sense of who I am.</p>
         </div>
         <div class="col-md-5" id="mainPage">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
