--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/About.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/About.cshtml
@@ -11,7 +11,7 @@
             <p id="callMeMaddy1"> As stated on my Home page, my name is </p>
             <p id="myName2"> Madison Klienstuber </p> <p id="callMeMaddy"> but you can call me Maddy if you'd like. </p>
             <br /><br />
-            <p id="descriptionOfPics">Enjoy some snapshots of my life on the right-hand side, and get a general sense of who I am.</p>
+            <p id="descriptionOfPics">To get a general sense of who I am, the images displayed on the right-hand side provide some snapshots into my life.</p>
         </div>
         <div class="col-md-5" id="mainPage">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -103,4 +103,18 @@
         <li>If I play video games, it would have to be puzzling games like Portal or Town of Salem, or basically any Mario game.</li>
         <li>My favorite animal would definitely be birds, and I enjoy bird watching when I'm bored and/or have the time.</li>
     </ol>
+</div>
+
+<div id="titleContainer">
+    <h1>Quotes I Would Like to Pass on</h1>
+    <dl>
+        <dt>"Everyday, it gets a little easier. But you gotta do it everyday. That's the hard part." -BoJack Horseman</dt>
+        <dd>- This is probably one of the most motivating quotes I've come across, and it has helped me practice good running habits. However, I feel that you can apply this quote to literally anything. If you practice something enough (a little bit every day) you'll get better. I try to think of this quote whenever something seems too hard in the moment, and it never fails to get me through challenging tasks. </dd>
+        <dt>"Everything is interesting. Look closer." -Jack Kerouac</dt>
+        <dd>- Too often, we take things for granted. You ever notice how, once you lose something good, you end up wanting it back because you didn't realize how wonderful it was until it was gone? I think, in general, we should be looking at everything as if we were seeing them for the first or last time, then we'll truly see life's glory.  </dd>
+        <dt>"Because in the end, you won't remember the time you spent working in the office or mowing your lawn. Climb that goddamn mountain." -Jack Kerouac</dt>
+        <dd>- I really admire this saying, as I think that most of us spend day after day doing the same thing, and don't take a lot of risks or try new things. But are we going to reminisce on the times where we sat in an office, doing a 9-5 every day, going home, eating, sleeping, and having the weekends be spent watching television? Probably not. I admire this quote because it reminds me to actually go out and do something that I know I will remember. Maybe one day, I'll go running after work or lift a couple weights for a few minutes if I don't have time to go out and jog, because I know I'll remember that more than just eating and watching TV, and surely, I feel better as well. Maybe I'll try something new, like a dance class or tai chi on my free time. I might make plans to go hiking, camping, or even just have a picnic outside with friends, family, a loved one, or even just in solitude to switch things up. You won't remember a specific day if you don't do anything unique or different, so go on and try something new if you can, even if it scares you. I know this is another Jack Kerouac quote, but honestly, he's got a lot of memorable content. </dd>
+        <dt>"If you're not scared then you're not taking a chance. And if you're not taking a chance, then what the hell are you doing anyway?" -How I Met Your Mother</dt>
+        <dd>- Why does anyone do anything? Simple, to get results that they desire. But how do they do the hard stuff? How do those people at the gym get and stay so fit? Well, unless they purposely wanted to give up a lot of food, drinks, and habits that most people enjoy, chances are, they went out of their comfort zone. They had the determination to do something that was unfomfortable or foreign to them, like working out every day, watching their food intake, and limiting time spent sitting/watching TV. Similarly, why do people get married, and how did they meet their spouses? They probably took a chance and asked someone out, even though there was a possibility that they'd fail and have to deal with rejection. What about those who are high up in the corporate ladder, and continuously get promoted? Chances are, (assumingly) they probably earned and worked towards promotions and raises, which was probably pretty difficult and maybe scary, but worth it. What about that trip that you thought you would hate, but then it ended up being one of your favorite memories? If you hadn't taken a chance, then you never would have made such a wonderful memory. Essentially, I love this quote because it encourages me to do something that scares me, so that I can make memories, try new things, and have no regrets that I might have if I didn't try something new. </dd>
+    </dl>
 </div>
