--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Index.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                 <div id="myImage"><img src="~/Images/me.jpg" /></div>
             </div>
             <div class="col-md-9" id="mainPage">
-                <p> Welcome to my website! I'm Madison, but I typically go by Maddy. Currently, I am attending Western Oregon University as a senior, obtaining a degree in <b>Computer Science</b> and a minor in <b>Communications</b> by this summer, as I'm graduating on June 13th, 2020. Please use the navigation bar above to view the contents of my website. </p>
+                <p> Welcome to my website! I'm Madison, but I typically go by Maddy. Currently, I am attending Western Oregon University as a senior, obtaining a degree in <b>Computer Science</b> and a minor in <b>Communications</b> by this summer, as I'm graduating on June 13th, 2020. <br /><br />Please use the navigation bar above to view the contents of my website, such as my About page where you can learn a bit about me, my Portfolio where you can find some of the projects/work I've done, and my Contact page where you can easily contact me. </p>
             </div>
         </div>
     </div>
