--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Portfolio.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Portfolio.cshtml
@@ -42,20 +42,21 @@
     <div class="row" id="row1">
         <div class="column" id="col1">
             <img src="~/Images/githubAPI.png" style="width:100%" /> <p id="picDesc">This project displays my GitHub repository via the GitHub API, using AJAX to display commits. </p>
-            <img src="~/Images/homeworkTracker.png" style="width:100%" /> <p id="picDesc">A homework tracker project where you can easily add your homework assignments to keep track of them, view them, and search through them. </p>
+            <img src="~/Images/homeworkTracker.png" style="width:100%" /> <p id="picDesc">My homework tracker project where you can easily add your homework assignments to keep track of them, view them, and search through them. </p>
             <img src="~/Images/firstWebsite.png" style="width:100%" /><p id="picDesc">One of the first websites I've ever made, using purely HTML, CSS, and JavaScript (no ASP.NET here). </p>
-            <img src="~/Images/worldWide.png" style="width:100%" /> <p id="picDesc">My world wide project thing. --Searching? </p>
+            <img src="~/Images/worldWide.png" style="width:100%" /> <p id="picDesc">This web application uses the World Wide Importers online sample database, and uses LINQ queries to search through the database. Used LINQPad to verify my LINQ queries. </p>
             <img src="~/Images/HelpPage.png" style="width:100%" /> <p id="picDesc">The easily accessible Help page found on the <i>Simply Seniors</i> website consists of Help topics on all things found on the <i>Simply Seniors</i> website. </p>
         </div>
         <div class="column" id="col2">
             <img src="~/Images/eventsAPI.png" style="width:100%" /> <p id="picDesc">One of my most recent projects, <i>Simply Seniors,</i> (social media web application) displaying events near the location you inputted during profile creation via Eventful API. </p>
-            <img src="~/Images/colorInterpolate.png" style="width:100%" /> <p id="picDesc">My color project thing. </p>
-            <img src="~/Images/simplySeniorsProfile.png" style="width:100%" /><p id="picDesc">My simply seniors2 project thing. </p>
-            <img src="~/Images/worldWide2.png" style="width:100%" /> <p id="picDesc">My world wide project thing. </p>
-            <img src="~/Images/athlete.png" style="width:100%" /> <p id="picDesc">My athlete project thing. </p>
+            <img src="~/Images/colorInterpolate.png" style="width:100%" /> <p id="picDesc">This project interpolates from one color to another.</p>
+            <img src="~/Images/simplySeniorsProfile.png" style="width:100%" /><p id="picDesc"> My team project, <i>Simply Seniors</i>, showing my profile page consisting of an "About Me", my individual posts, and who I follow on the website. </p>
+            <img src="~/Images/worldWide2.png" style="width:100%" /> <p id="picDesc"> The results after searching through the World Wide Importers online sample database. </p>
+            <img src="~/Images/athlete.png" style="width:100%" /> <p id="picDesc">Athlete tracking system in which I created my own database consisting of tables with athletes, locations, dates, events, etc. This screenshot uses AJAX and to display a graph depending on which school, athlete, and race type you select to show an athlete's progress over time. </p>
         </div>
     </div>
-    <img src="~/Images/website.png" style="width:100%" /> <p id="picDesc">Needless to say, the website you're on right now.</p>
+    <hr />
+    <img src="~/Images/website.png" style="width:100%" /> <p id="picDesc">Needless to say, this image is the website you're on right now. <br /> Hosted using Azure Web Services, created with ASP.NET MVC5 with C#.</p>
 </div>
 
 
