--- a/KlienstuberWebsite/KlienstuberWebsite/Content/Site.css
+++ b/KlienstuberWebsite/KlienstuberWebsite/Content/Site.css
@@ -146,7 +146,7 @@ textarea {
     }
 
 #myName2 {
-    color: black;
+    color: orangered;
     font-family: 'Cedarville Cursive', cursive;
     font-size: 45px;
     position: relative;
@@ -230,3 +230,47 @@ textarea {
     border-bottom-right-radius: 20px;
     background-color: lightgrey;
 }
+
+/* Contact Page */
+
+#bodyEmail {
+    margin-left: 350px;
+}
+
+
+#sendEmail {
+    background-color: whitesmoke;
+    color: black;
+    border-style: solid;
+    border-color: lightgrey;
+    box-shadow: 0.5px 0.5px 0.5px lightgrey;
+    border-width: 1px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+#emailBox {
+    margin-left: 300px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 0px 25px 25px;
+    background: white;
+    box-shadow: 0px 0px 0px 5px rgba( 255,255,255,0.4 ), 0px 4px 20px rgba( 0,0,0,0.33 );
+    border-radius: 15px;
+    display: table;
+    position: static;
+    padding-top: 20px;
+    width: 500px;
+}
+
+    #emailBox h2 {
+        text-shadow: 1px 1px lightgrey;
+    }
+
+    #emailBox p {
+        font-weight: 300;
+    }
+
+    #emailBox textarea {
+        width: 600px;
+    }
