Finishing up website

--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Contact.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Contact.cshtml
@@ -43,3 +43,9 @@
         </div>
     </div>
 </form>
+<br />
+<div id="emailBox" style="width: 900px; position: relative; right: 200px; text-align: center;">
+    <h1>Or Reach Out To Me Directly</h1>
+    <p style="font-size:20px;">Call <a href="tel:503-867-3534" tabindex="0">(503) 867-3534</a> Mon-Fri: 9am - 5pm PST.</p>
+</div>
+<br />
