--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Portfolio.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Home/Portfolio.cshtml
@@ -38,31 +38,32 @@
 
 <div id="titleContainer">
     <h1>Snippets of My Work / Web Applications</h1>
+    <p>To enlargen the snippets, simply click on any of the images below.</p>
     <!-- Photo Grid -->
     <div class="row" id="row1">
         <div class="column" id="col1">
-            <img src="~/Images/githubAPI.png" style="width:100%" /> <p id="picDesc">This project displays my GitHub repository via the GitHub API, using AJAX to display commits. </p>
-            <img src="~/Images/homeworkTracker.png" style="width:100%" /> <p id="picDesc">My homework tracker project where you can easily add your homework assignments to keep track of them, view them, and search through them. </p>
-            <img src="~/Images/firstWebsite.png" style="width:100%" /><p id="picDesc">One of the first websites I've ever made, using purely HTML, CSS, and JavaScript (no ASP.NET here). </p>
-            <img src="~/Images/worldWide.png" style="width:100%" /> <p id="picDesc">This web application uses the World Wide Importers online sample database, and uses LINQ queries to search through the database. Used LINQPad to verify my LINQ queries. </p>
-            <img src="~/Images/HelpPage.png" style="width:100%" /> <p id="picDesc">The easily accessible Help page found on the <i>Simply Seniors</i> website consists of Help topics on all things found on the <i>Simply Seniors</i> website. </p>
+            <a href="~/Images/githubAPI.png" target="_self"> <img src="~/Images/githubAPI.png" style="width:100%" /> </a> <p id="picDesc">This project displays my GitHub repository via the GitHub API, using AJAX to display commits. </p>
+            <a href="~/Images/homeworkTracker.png" target="_self"><img src="~/Images/homeworkTracker.png" style="width:100%" /> </a> <p id="picDesc">My homework tracker project where you can easily add your homework assignments to keep track of them, view them, and search through them. </p>
+            <a href="~/Images/firstWebsite.png" target="_self"><img src="~/Images/firstWebsite.png" style="width:100%" /> </a><p id="picDesc">One of the first websites I've ever made, using purely HTML, CSS, and JavaScript (no ASP.NET here). </p>
+            <a href="~/Images/worldWide.png" target="_self"> <img src="~/Images/worldWide.png" style="width:100%" /></a> <p id="picDesc">This web application uses the World Wide Importers online sample database, and uses LINQ queries to search through the database. Used LINQPad to verify my LINQ queries. </p>
+            <a href="~/Images/HelpPage.png" target="_self"><img src="~/Images/HelpPage.png" style="width:100%" /> </a> <p id="picDesc">The easily accessible Help page found on the <i>Simply Seniors</i> website consists of Help topics on all things found on the <i>Simply Seniors</i> website. </p>
         </div>
         <div class="column" id="col2">
-            <img src="~/Images/eventsAPI.png" style="width:100%" /> <p id="picDesc">One of my most recent projects, <i>Simply Seniors,</i> (social media web application) displaying events near the location you inputted during profile creation via Eventful API. </p>
-            <img src="~/Images/colorInterpolate.png" style="width:100%" /> <p id="picDesc">This project interpolates from one color to another.</p>
-            <img src="~/Images/simplySeniorsProfile.png" style="width:100%" /><p id="picDesc"> My team project, <i>Simply Seniors</i>, showing my profile page consisting of an "About Me", my individual posts, and who I follow on the website. </p>
-            <img src="~/Images/worldWide2.png" style="width:100%" /> <p id="picDesc"> The results after searching through the World Wide Importers online sample database. </p>
-            <img src="~/Images/athlete.png" style="width:100%" /> <p id="picDesc">Athlete tracking system in which I created my own database consisting of tables with athletes, locations, dates, events, etc. This screenshot uses AJAX and to display a graph depending on which school, athlete, and race type you select to show an athlete's progress over time. </p>
+            <a href="~/Images/eventsAPI.png" target="_self"><img src="~/Images/eventsAPI.png" style="width:100%" /> </a> <p id="picDesc">One of my most recent projects, <i>Simply Seniors,</i> (social media web application) displaying events near the location you inputted during profile creation via Eventful API. </p>
+            <a href="~/Images/colorInterpolate.png" target="_self"> <img src="~/Images/colorInterpolate.png" style="width:100%" /> </a> <p id="picDesc">This project interpolates from one color to another.</p>
+            <a href="~/Images/simplySeniorsProfile.png" target="_self"> <img src="~/Images/simplySeniorsProfile.png" style="width:100%" /></a><p id="picDesc"> My team project, <i>Simply Seniors</i>, showing my profile page consisting of an "About Me", my individual posts, and who I follow on the website. </p>
+            <a href="~/Images/worldWide2.png" target="_self"><img src="~/Images/worldWide2.png" style="width:100%" /></a> <p id="picDesc"> The results after searching through the World Wide Importers online sample database. </p>
+            <a href="~/Images/athlete.png" target="_self"><img src="~/Images/athlete.png" style="width:100%" /></a> <p id="picDesc">Athlete tracking system in which I created my own database consisting of tables with athletes, locations, dates, events, etc. This screenshot uses AJAX and to display a graph depending on which school, athlete, and race type you select to show an athlete's progress over time. </p>
         </div>
     </div>
     <hr />
-    <img src="~/Images/website.png" style="width:100%" /> <p id="picDesc">Needless to say, this image is the website you're on right now. <br /> Hosted using Azure Web Services, created with ASP.NET MVC5 with C#.</p>
+    <a href="~/Images/website.png" target="_self"><img src="~/Images/website.png" style="width:100%" /> </a><p id="picDesc">Needless to say, this image is the website you're on right now. <br /> Hosted using Azure Web Services, created with ASP.NET MVC5 with C#.</p>
 </div>
 
 
 <script type="text/javascript">
     document.getElementById("resumeButton").onclick = function () {
-        location.href = "https://drive.google.com/file/d/17n5DrZ8Hv46P659k-5dVHUF6qS3U0eip/view";
+        location.href = "https://drive.google.com/file/d/1ZeZuOos5DOsln_k92AJ96DLl1Pc-Xlqi/view?usp=sharing";
     };
 </script>
 
