--- a/KlienstuberWebsite/KlienstuberWebsite/Views/Shared/_Layout.cshtml
+++ b/KlienstuberWebsite/KlienstuberWebsite/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sunshiney&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Sunshiney&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/Images/favicon-32x32.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
 </head>
 
