--- a/KlienstuberWebsite/KlienstuberWebsite/Content/Site.css
+++ b/KlienstuberWebsite/KlienstuberWebsite/Content/Site.css
@@ -274,3 +274,48 @@ textarea {
     #emailBox textarea {
         width: 600px;
     }
+
+    /* Error Page - 404 */
+
+#moveThisUpToTheRain {
+    position: relative;
+    bottom: 740px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: solid;
+    border-width: 1px;
+    border-radius: 20px;
+    border-color: black;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+    #moveThisUpToTheRain p {
+        text-align: center;
+        font-size: 20px;
+    }
+
+#sunClick {
+    position: relative;
+    bottom: 700px;
+    left: 310px;
+}
+
+    #sunClick img {
+        width: 500px;
+    }
+
+#rain {
+    margin-bottom: -600px;
+}
+
+    #rain a {
+        text-decoration: none;
+    }
+
+#sunClickText {
+    position: relative;
+    bottom: 1030px;
+    font-size: 55px;
+    left: 495px;
+    color: white;
+}
